💻 Update sample html
strapdownjs.com is not currently working. So replace it with jsDelivr.

--- a/sample1.html
+++ b/sample1.html
@@ -3,5 +3,5 @@
 <xmp>
 この中に **Markdown** を記載していきます。
 </xmp>
-<script src="https://strapdownjs.com/v/0.2/strapdown.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/arturadib/strapdown@gh-pages/v/0.2/strapdown.min.js"></script>
 </html>
