--- a/sample2.html
+++ b/sample2.html
@@ -9,6 +9,6 @@
 <textarea theme="simplex">
 `<xmp>` の代わりに `<textarea>` を使用できます。  
 </textarea>
-<script src="https://strapdownjs.com/v/0.2/strapdown.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/arturadib/strapdown@gh-pages/v/0.2/strapdown.min.js"></script>
 </body>
 </html>
