🟩 Add Brite theme

--- a/5/index.html
+++ b/5/index.html
@@ -50,6 +50,7 @@ culpa qui officia deserunt mollit anim id est laborum.
 
 Bootstrap themes from [Bootswatch.com](https://bootswatch.com/) are included for your convenience. Simply include the attribute `theme` in your `<xmp>` tag with one of the following theme names (default is Default Base Bootstrap):
 
+<img src="https://strapdown-js.balloon.net.eu.org/5/brite.png" width="350" height="210" alt="Brite">
 <img src="https://strapdown-js.balloon.net.eu.org/5/cerulean.png" width="350" height="210" alt="Cerulean">
 <img src="https://strapdown-js.balloon.net.eu.org/5/cosmo.png" width="350" height="210" alt="Cosmo">
 <img src="https://strapdown-js.balloon.net.eu.org/5/cyborg.png" width="350" height="210" alt="Cyborg">
