⬜ Added `body-tertiary` to navbar color

--- a/5/index.html
+++ b/5/index.html
@@ -80,7 +80,7 @@ Bootstrap themes from [Bootswatch.com](https://bootswatch.com/) are included for
 
 ### Set navbar color
 
-The types of navbar color are `primary`, `dark` and `light`. Default is `primary`:
+The types of navbar color are `primary`, `dark`, `light` and `body-tertiary`. Default is `primary`:
 
 ```
 <textarea theme="yeti" navbar="light">
