🔍 Add structured data

--- a/index.html
+++ b/index.html
@@ -1,5 +1,13 @@
 <html>
 <title>strapdown-js.balloon.net.eu.org</title>
+<script type="application/ld+json">
+{
+  "@context" : "https://schema.org",
+  "@type" : "WebSite",
+  "name" : "strapdown-js.balloon.net.eu.org",
+  "url" : "https://strapdown-js.balloon.net.eu.org/"
+}
+</script>
 <textarea>
 # strapdown-js.balloon.net.eu.org
 
